--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+
+  "engines" : { 
+    "node" : ">=14.20.1" 
+  },
+
   "scripts": {
     "start": "node app.js"
   },
