--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
-
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "engines" : { 
     "node" : ">=14.20.1" 
   },
 
-  "scripts": {
-    "start": "node app.js"
-  },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
